<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">身份证识别</string>
    <string name="action_settings">Settings</string>
    <string name="name">姓    名：</string>
    <string name="race">民    族：</string>
    <string name="gender">性    别：</string>
    <string name="birthday">出    生：</string>
    <string name="address">住    址：</string>
    <string name="id_no">公民身份证号码：</string>
    <string name="default_text">未知</string>
    <string name="take_photo">拍摄照片</string>
    <string name="select_album">从相册中选取</string>
    <string name="loading">正在识别，请稍候...</string>
    <string name="do_ocr">识别</string>
</resources>
