<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <!-- 姓名 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="#00ffff"
            android:textSize="20sp" >
        </TextView>
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_text"
            android:textColor="#ffffff"
            android:textSize="20sp" >
        </TextView>
    </LinearLayout>

    <!-- 性别和民族 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gender"
            android:textColor="#00ffff"
            android:textSize="20sp" >
        </TextView>
        <TextView
            android:id="@+id/gender"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_text"
            android:textColor="#ffffff"
            android:textSize="20sp" >
        </TextView>
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/race"
            android:textColor="#00ffff"
            android:textSize="20sp" >
        </TextView>
        <TextView
            android:id="@+id/race"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_text"
            android:textColor="#ffffff"
            android:textSize="20sp" >
        </TextView>
    </LinearLayout>

    <!-- 出生日期 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/birthday"
            android:textColor="#00ffff"
            android:textSize="20sp" >
        </TextView>
        <TextView
            android:id="@+id/birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_text"
            android:textColor="#ffffff"
            android:textSize="20sp" >
        </TextView>
    </LinearLayout>

    <!-- 住址 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/address"
            android:textColor="#00ffff"
            android:textSize="20sp" >
        </TextView>
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_text"
            android:textColor="#ffffff"
            android:textSize="20sp" >
        </TextView>
    </LinearLayout>

    <!-- 身份证号码 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/id_no"
            android:textColor="#00ffff"
            android:textSize="20sp" >
        </TextView>
        <TextView
            android:id="@+id/id_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_text"
            android:textColor="#ffffff"
            android:textSize="20sp" >
        </TextView>
    </LinearLayout>

    <!-- 拍摄照片或从相册中选取 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >
        <ImageButton
            android:id="@+id/take_phone"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#000000"
            android:contentDescription="@string/take_photo"
            android:scaleType="fitCenter"
            android:src="@drawable/take_photo" />
        <ImageButton
            android:id="@+id/select_album"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#000000"
            android:contentDescription="@string/select_album"
            android:scaleType="fitCenter"
            android:src="@drawable/select_album" />
    </LinearLayout>

    <SurfaceView
        android:id="@+id/surfaceView1"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="400dp" />

</LinearLayout>